--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@ html {
           </a>
         </li>
       </ul>
-      <ul class="zb-nav__sec-btns-list">
+      <!-- 
+        <ul class="zb-nav__sec-btns-list">
         <li class="zb-nav__sec-btn-item"><a href="#" class="zb-nav__sec-btn w-inline-block"><img src="images/twitter--black.svg" alt="" class="zb-nav__sec-btn-image"></a></li>
         <li class="zb-nav__sec-btn-item"><a href="https://github.com/zbay" class="zb-nav__sec-btn w-inline-block"><img src="images/github--black.svg" alt="" class="zb-nav__sec-btn-image"></a></li>
       </ul>
+    -->
     </div>
   </div>
+  <!--
   <div class="zb-invite-section">
     <div class="zb-alert-content">
       <div class="zb-alert-title-section"><img src="images/invite.svg" alt="" class="zb-alert-icon">
@@ -60,6 +63,7 @@ html {
       <div class="zb-alert-subheading">Your friend may have sent you some funds to claim. After installing, come back here to <a href="#">accept your invitation</a><span></span>. </div>
     </div>
   </div>
+  -->
   <div class="zb-mobile-alert">
     <div class="zb-alert-content">
       <div class="zb-alert-title-section"><img src="images/ic_baseline-mobile-off.svg" alt="" class="zb-alert-icon">
@@ -211,10 +215,10 @@ html {
         </a>
       </li>
     </ul>
-    <ul class="zb-footer__sec-btns-list">
+    <!--<ul class="zb-footer__sec-btns-list">
       <li class="zb-footer__sec-btn-item"><a href="#" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
       <li class="zb-footer__sec-btn-item"><a href="https://github.com/zbay" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
-    </ul>
+    </ul>-->
     <div class="zb-footer__copyright-text">© Copyright Zbay 2019</div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
