--- a/index.html
+++ b/index.html
@@ -76,24 +76,31 @@ html {
     <div class="zb-hero">
       <div class="zb-hero__desc-cont">
         <div class="zb-hero__zbay-logo"><img src="images/logo-lockup--circle.svg" alt="" class="zbay-logo"></div>
-        <h1 class="zb-hero-heading">A social marketplace for physical goods, information, and ideas. <span class="zb-hero__highlight-text">Owned by no one</span>.</h1><a href="#" class="zb-hero-button w-button">Download for Mac</a>
+        <h1 class="zb-hero-heading">A social marketplace for physical goods, information, and ideas. <span class="zb-hero__highlight-text">Owned by no one</span>.</h1>
+        <!-- <a href="#" class="zb-hero-button w-button">Download for Mac</a> -->
         <ul class="zb-hero__sec-links-list">
+
+          <!--
           <li class="zb-hero__sec-link-item">
             <div class="zb-hero__sec-link-desc">Windows? <a href="#" class="zb-hero__sec-link">Download Zbay for Windows</a></div>
+          </li>-->
+          <li class="zb-hero__sec-link-item">
+            <div class="zb-hero__sec-link-desc">On Linux? <a href="#" class="zb-hero__sec-link">Download Zbay for Linux</a></div>
           </li>
           <li class="zb-hero__sec-link-item">
-            <div class="zb-hero__sec-link-desc">Linux? <a href="#" class="zb-hero__sec-link">Download Zbay for Linux</a></div>
+              <div class="zb-hero__sec-link-desc">On Mac or Windows? <a href="mailto:joinbeta@zbay.llc" class="zb-hero__sec-link">Request a beta invite</a></div>
+            </li>                    
+          <li class="zb-hero__sec-link-item">
+            <div class="zb-hero__sec-link-desc">Curious why we made it? <a href="#why" class="zb-hero__sec-link">Read our essay</a></div>
           </li>
           <li class="zb-hero__sec-link-item">
-            <div class="zb-hero__sec-link-desc">Curious why we made it? <a href="#" class="zb-hero__sec-link">Read our essay</a></div>
-          </li>
-          <li class="zb-hero__sec-link-item">
-            <div class="zb-hero__sec-link-desc"><em>How</em> private and anonymous? <a href="#" class="zb-hero__sec-link">Learn about Zcash</a></div>
+            <div class="zb-hero__sec-link-desc"><em>How</em> private and anonymous? <a href="https://z.cash/" class="zb-hero__sec-link">Learn about Zcash</a></div>
           </li>
         </ul>
-        <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
+        <!-- <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
           <div class="zb-warning-text">Zbay is in Alpha and shouldn&#x27;t be used for activities requiring security.</div>
         </div>
+      -->
       </div>
       <div data-w-id="026f2572-7222-947b-ef55-337847e2fc0d" style="-webkit-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-moz-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-ms-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);opacity:0" class="zb-hero__image-container"><img src="images/macbook-with-screen.png" srcset="images/macbook-with-screen-p-500.png 500w, images/macbook-with-screen-p-800.png 800w, images/macbook-with-screen-p-2000.png 2000w, images/macbook-with-screen.png 2344w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 84vw, (max-width: 991px) 80vw, 820px" alt="" class="zbay-app-mockup"></div>
     </div>
