Final text changes

--- a/index.html
+++ b/index.html
@@ -97,18 +97,17 @@ html {
             <div class="zb-hero__sec-link-desc"><em>How</em> private and anonymous? <a href="https://z.cash/" class="zb-hero__sec-link">Learn about Zcash</a></div>
           </li>
         </ul>
-        <!-- <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
-          <div class="zb-warning-text">Zbay is in Alpha and shouldn&#x27;t be used for activities requiring security.</div>
+        <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
+          <div class="zb-warning-text">Zbay is highly experimental. For secure communication, <a href="https://ssd.eff.org/en/module/communicating-others">use established tools</a>.</div>
         </div>
-      -->
       </div>
       <div data-w-id="026f2572-7222-947b-ef55-337847e2fc0d" style="-webkit-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-moz-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-ms-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);opacity:0" class="zb-hero__image-container"><img src="images/macbook-with-screen.png" srcset="images/macbook-with-screen-p-500.png 500w, images/macbook-with-screen-p-800.png 800w, images/macbook-with-screen-p-2000.png 2000w, images/macbook-with-screen.png 2344w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 84vw, (max-width: 991px) 80vw, 820px" alt="" class="zbay-app-mockup"></div>
     </div>
   </div>
   <div id="why" class="zb-essay-section">
     <div class="zb-essay">
-      <h1 data-w-id="2bf1c4bc-d4f2-8c4a-1195-281e50e43eba" style="opacity:0" class="zb-section-heading">Why we made Zbay?</h1>
-      <p class="zb-essay-paragraph w-clearfix"><span class="zb-drop-cap">W</span>e’re making Zbay because we want a patch of online life that&#x27;s controlled by the people of the Internet. Not by one rich man in California, like Facebook is. Or by a reprehensible dictatorship, like WeChat and TikTok are. Or by a corporation legally bound to squeeze as much ad revenue from us as possible, like Google is.</p>
+      <h1 data-w-id="2bf1c4bc-d4f2-8c4a-1195-281e50e43eba" style="opacity:0" class="zb-section-heading">Why we made Zbay</h1>
+      <p class="zb-essay-paragraph w-clearfix"><span class="zb-drop-cap">W</span>e made Zbay because we want a patch of online life that&#x27;s controlled by the people of the Internet. Not by one rich man in California, like Facebook is. Or by a reprehensible dictatorship, like WeChat and TikTok are. Or by a corporation legally bound to squeeze as much ad revenue from us as possible, like Google is.</p>
       <p class="zb-essay-paragraph">Technically and institutionally speaking, this is hard to do. But it&#x27;s not impossible. To start somewhere, Zbay builds on two technical/institutional building blocks: free software and blockchain. </p>
       <p class="zb-essay-paragraph">In the year 1980, in Cambridge, Massachusetts, while fixing a broken printer of all things, a software developer named Richard M. Stallman had a powerful revelation. He realized that software makers had legal—and technical—power to control software users, and that they could use this power in nefarious ways, to extort, spy, censor, or worse.</p>
       <p class="zb-essay-paragraph">Stallman defined what he called the &quot;four freedoms” to rally software makers around a brighter future where software users were in control, not under control. The four freedoms were:</p>
