add links toUbuntu 16 /18 downloads

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@ html {
             <div class="zb-hero__sec-link-desc">Windows? <a href="#" class="zb-hero__sec-link">Download Zbay for Windows</a></div>
           </li>-->
           <li class="zb-hero__sec-link-item">
-            <div class="zb-hero__sec-link-desc">On Linux? <a href="#" class="zb-hero__sec-link">Download Zbay for Linux</a></div>
+            <div class="zb-hero__sec-link-desc">On Linux? Download 
+              <a href="https://zbay-release-linux.s3.eu-central-1.amazonaws.com/zbay_0.9.73-dev-ubuntu16_amd64.deb" class="zb-hero__sec-link">Ubuntu 16</a> /
+              <a href="https://zbay-release-linux.s3.eu-central-1.amazonaws.com/zbay_0.9.73-dev-ubuntu18_amd64.deb" class="zb-hero__sec-link">Ubuntu 18</a>
+            </div>
           </li>
           <li class="zb-hero__sec-link-item">
               <div class="zb-hero__sec-link-desc">On Mac or Windows? <a href="mailto:joinbeta@zbay.llc" class="zb-hero__sec-link">Request a beta invite</a></div>
