--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ html {
         <li class="zb-essay-list-item">Its founders are pioneers in building technology for online privacy.</li>
       </ul>
       <p class="zb-essay-paragraph">By building on Zcash, we can trust leading privacy-tech pioneers to protect users’ privacy, and focus on building an interface that’s easy to use. Like many eager observers of the blockchain / cryptocurrency space, we’ve felt an enormous pent-up desire for products to come along that actually matter to all of us. There as been such a breathtaking amount of investment in moonshot-like infrastructure projects to build this new stack for decentralized, peer-to-peer, free software applications. But it has produced few new useful toys for our daily lives. When do we get fun products that we can download, play with, and use with our friends to build online spaces where we’re secure, and free?<br></p>
-      <p class="zb-essay-paragraph">When we saw the announcement of the encrypted memo field in Zcash, we got excited. For the first time a blockchain stack was natively supporting enough protections for user privacy to build something really useful beyond finance. We thought, “why wait for somebody else to build our dream?” We decided to go for it, and build one of the free software, peer-to-peer dream apps we’d always wished would exist—something out of a Thomas Pynchon novel: a W.A.S.T.E, or a Deep Archer. We decided to take the best big step we could in the direction of a world where our online life is controlled by the people of the Internet.<br> </p>
+      <p class="zb-essay-paragraph">When we saw the announcement of the encrypted memo field in Zcash, we got excited. For the first time a blockchain stack was natively supporting enough protections for user privacy to build something really useful beyond finance. We thought, “why wait for somebody else to build our dream?” We decided to go for it, and build one of the free software, peer-to-peer dream apps we’d always wished would exist—something out of a Thomas Pynchon novel: a W.A.S.T.E, or a DeepArcher. We decided to take the best big step we could in the direction of a world where our online life is controlled by the people of the Internet.<br> </p>
     </div>
   </div>
   <div id="faq" class="zb-faq-section">
@@ -225,7 +225,8 @@ html {
       <li class="zb-footer__sec-btn-item"><a href="#" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
       <li class="zb-footer__sec-btn-item"><a href="https://github.com/zbay" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
     </ul>-->
-    <div class="zb-footer__copyright-text">© Copyright Zbay 2019</div>
+    <div class="zb-footer__copyright-text">177 Huntington Ave Suite 1703 Boston, MA 02115</div>
+    <div class="zb-footer__copyright-text"><a href="mailto:contact@zbay.llc">contact@zbay.llc</a></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
