--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="https://assets.website-files.com/5d2cf4f399a6906ce73b825f/5d4b3a2721bce7101768c9bf_32.svg"
+  <link href="images/favicon.svg"
     rel="shortcut icon" type="image/x-icon">
-  <link href="https://assets.website-files.com/5d2cf4f399a6906ce73b825f/5d4b3a2c21bce7cba968c9ee_256.svg"
+  <link href="images/favicon.svg"
     rel="apple-touch-icon">
   <style type="text/css">
     @media screen and (min-width: 1200px) {
