Updates Github and Twitter links

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           </a></li>
       </ul>
       <ul class="zb-nav__sec-btns-list">
-        <li class="zb-nav__sec-btn-item"><a href="#" class="zb-nav__sec-btn w-inline-block"><img
+        <li class="zb-nav__sec-btn-item"><a href="https://twitter.com/zbayapp" class="zb-nav__sec-btn w-inline-block"><img
               src="https://assets.website-files.com/5d2cf4f399a6906ce73b825f/5d447627c27b02bdd92a515b_twitter--black.svg"
               alt="" class="zb-nav__sec-btn-image"></a></li>
-        <li class="zb-nav__sec-btn-item"><a href="https://github.com/ZbayTeam/zbay" class="zb-nav__sec-btn w-inline-block"><img
+        <li class="zb-nav__sec-btn-item"><a href="https://github.com/ZbayApp/zbay" class="zb-nav__sec-btn w-inline-block"><img
               src="https://assets.website-files.com/5d2cf4f399a6906ce73b825f/5d44762795c1f5656d89f6e9_github--black.svg"
               alt="" class="zb-nav__sec-btn-image"></a></li>
       </ul>
@@ -378,10 +378,10 @@
         </a>
       </li>
     </ul>
-    <!--<ul class="zb-footer__sec-btns-list">
-      <li class="zb-footer__sec-btn-item"><a href="#" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
-      <li class="zb-footer__sec-btn-item"><a href="https://github.com/zbay" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
-    </ul>-->
+    <ul class="zb-footer__sec-btns-list">
+      <li class="zb-footer__sec-btn-item"><a href="https://twitter.com/zbayapp" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
+      <li class="zb-footer__sec-btn-item"><a href="https://github.com/ZbayApp/zbay" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
+    </ul>
     <div class="zb-footer__copyright-text">177 Huntington Ave Suite 1703 Boston, MA 02115</div>
     <div class="zb-footer__copyright-text"><a href="mailto:contact@zbay.llc">contact@zbay.llc</a></div>
   </div>
