hide mobile warrning

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
     </div>
   </div>
   -->
-  <div class="zb-mobile-alert">
+  <!-- <div class="zb-mobile-alert">
     <div class="zb-alert-content">
       <div class="zb-alert-title-section"><img src="images/ic_baseline-mobile-off.svg" alt="" class="zb-alert-icon">
         <h1 class="zb-alert-heading">Zbay is not available on mobile yet. </h1>
       </div>
       <div class="zb-alert-subheading">Visit this page from a desktop to download Zbay for Mac, Windows and Linux.</div>
     </div>
-  </div>
+  </div> -->
   <div class="zb-hero-section">
     <div class="zb-hero">
       <div class="zb-hero__desc-cont">
