change linux versions to AppImage

--- a/please-do-not-share-yet/ubuntu-18.html
+++ b/please-do-not-share-yet/ubuntu-18.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://s3.amazonaws.com/release.zbay.app/zbay_1.0.14-dev-linux-18-2_amd64.deb" />
+<meta http-equiv="refresh" content="0; url=https://s3.amazonaws.com/release.zbay.app/Zbay-1.0.15-dev-linux-18-2.AppImage" />
