--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
         <div class="zb-warning"><img
             src="https://assets.website-files.com/5d2cf4f399a6906ce73b825f/5deabbc8e942e7755c36dae8_warning.svg"
             width="48" height="48" alt="" class="zb-warning-image">
-          <div class="zb-warning-text">Zbay is in beta. Don't use it for storing funds or when security is critical.</div>
+          <div class="zb-warning-text">Zbay is in beta. Don't use it for storing funds or when security is critical.
         </div>
+      </div>
       </div>
       <div data-w-id="026f2572-7222-947b-ef55-337847e2fc0d"
         style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
@@ -316,18 +317,21 @@
       <p class="zb-p">Free software gave users meaningful control over code. Peer-to-peer networks extended this control
         to the platform level, but with severe limitations. But Bitcoin and successors like Ethereum blew the doors off
         what kinds of applications you could practically build with a peer-to-peer network, and opened up the
-        possibility for forking entire platforms while retaining useful data. They let us extend the guarantee granted by free
+        possibility for forking entire platforms while retaining useful data. They let us extend the guarantee granted
+        by free
         software even farther.<br></p>
       <h3 class="zb-h3">4. ZK-SNARKs and Zcash let peer-to-peer platforms keep secrets</h3>
       <p class="zb-p">Bitcoin had a big missing piece: it didn’t address privacy. Theoretically, anything you did with
-        Bitcoin was visible to everyone in the world; they just might not know it was you. But to make a functioning online
+        Bitcoin was visible to everyone in the world; they just might not know it was you. But to make a functioning
+        online
         community with things like direct messages, or an ecommerce platform where people provide sellers their shipping
         address, you need to be able to keep some things private.&nbsp;<br></p>
       <p class="zb-p">Zcash is a Bitcoin successor with an emphasis on privacy. It lets you send transactions without
         revealing what they are or who they’re going to. It also includes a way to attach encrypted messages to
         transactions. If you want to build something more like Facebook, Twitter, or reddit on top of a blockchain,
         these features make Zcash a plausible (if clunky) place to start.<br></p>
-      <p class="zb-p">Zbay is built on the Zcash network. Where Facebook’s apps connect to Facebook's servers, Zbay connects to the
+      <p class="zb-p">Zbay is built on the Zcash network. Where Facebook’s apps connect to Facebook's servers, Zbay
+        connects to the
         Zcash network. Where most emails go through servers controlled by Google or Microsoft, Zbay’s messages go
         through the Zcash network. The Zcash network itself is made up of people running Zcash nodes on computers they
         control. Users don’t need to trust other Zcash node operators either, because the network’s design constrains
@@ -405,7 +409,8 @@
         of conduct.&nbsp;<br></p>
       <p class="zb-p">That said, channel owners have complete freedom to decide the rules for their channel, and the
         fact that Zbay is a free software, peer-to-peer, blockchain-based platform guarantees they always will.
-        First, the Zcash blockchain is designed for censorship resistance. You can't simply delete transactions or messages. When channel owners
+        First, the Zcash blockchain is designed for censorship resistance. You can't simply delete transactions or
+        messages. When channel owners
         “hide” a message on Zbay, they are sending a new message which tells the Zbay app to ignore it. The hidden
         message is still there, and users could modify their Zbay app to display it. If the Zbay team added censorship
         code, an anti-censorship fork could remove it, and no human expression would be lost.&nbsp;<br></p>
@@ -427,14 +432,19 @@
         their own alternative. This guarantees that the people of the Internet will control Zbay’s underlying code.</p>
       <p class="zb-p">Zbay is peer-to-peer, so Zbay as a platform emerges hive-like when many users run the code of the
         Zbay app. If the code survives, the platform survives as well. If developers with a new and better vision want
-        to fork the code, they can fork the platform as well. Thanks to Zbay being a peer-to-peer network, the control users enjoy over code also gives them
+        to fork the code, they can fork the platform as well. Thanks to Zbay being a peer-to-peer network, the control
+        users enjoy over code also gives them
         meaningful control over the platform.</p>
       <p class="zb-p">Because Zbay uses a blockchain, it can do some special things that used to not be possible in
-        peer-to-peer networks, like registering unique usernames or channel names, sending money, and buying or selling things.
-        This also lets Zbay use small fees to increase the cost of being a bad actor—for example by registering millions of fake
-        accounts, sending spam, or scamming other users. Using a blockchain network guarantees that competing projects will
-        be able to take essential data (like channels, users, and their messages) with them when they fork, without needing permission
-        from the team  behind Zbay&mdash;in stark contrast to centralized services like Facebook, where big companies
+        peer-to-peer networks, like registering unique usernames or channel names, sending money, and buying or selling
+        things.
+        This also lets Zbay use small fees to increase the cost of being a bad actor—for example by registering millions
+        of fake
+        accounts, sending spam, or scamming other users. Using a blockchain network guarantees that competing projects
+        will
+        be able to take essential data (like channels, users, and their messages) with them when they fork, without
+        needing permission
+        from the team behind Zbay&mdash;in stark contrast to centralized services like Facebook, where big companies
         use control over data to lock users and developers into the network.</p>
       <p class="zb-p">Zbay uses the cutting-edge, privacy-focused blockchain Zcash, so it can offer basic privacy
         protections like end-to-end encryption for direct messages and group chats. It can even protect “metadata,”
@@ -446,7 +456,8 @@
         researchers and verified to be secure against all known attacks.</p>
       <p class="zb-p">Zbay has a deep trove of free software governance models to choose from, as well as new kinds of
         entities like the <a href="https://en.wikipedia.org/wiki/B_Corporation_(certification)">B Corporation</a> or the
-        <a href="https://en.wikipedia.org/wiki/Decentralized_application">DApp</a>. The Zcash network on which Zbay is built has
+        <a href="https://en.wikipedia.org/wiki/Decentralized_application">DApp</a>. The Zcash network on which Zbay is
+        built has
         a thoughtful and evolving governance model. The low cost of forking a free software, peer-to-peer,
         blockchain-based platform creates a baseline guarantee that the platform will serve users’ interests. But a good
         governance model can do even better: it can actively solicit and respond to user and developer feedback and make
@@ -455,9 +466,11 @@
       <p class="zb-p">Like many eager observers of the blockchain / cryptocurrency space, we’ve felt an enormous pent-up
         desire for products to come along that actually matter to all of us. We saw the first peer-to-peer platforms
         emerge in the early 2000s. We saw Bitcoin and Ethereum emerge years later. We watched as a breathtaking amount
-        of investment flowed into moonshot-like infrastructure projects to build this new stack for decentralized, peer-to-peer,
+        of investment flowed into moonshot-like infrastructure projects to build this new stack for decentralized,
+        peer-to-peer,
         free software applications.</p>
-      <p class="zb-p">Still, we’ve felt some pent-up frustration that all this investment and passion has produced so few
+      <p class="zb-p">Still, we’ve felt some pent-up frustration that all this investment and passion has produced so
+        few
         useful tools for our daily lives. When do us Internet users get fun products that we can download, play with,
         and use with our friends to build online spaces where people are secure and free?</p>
       <p class="zb-p">When we saw the announcement of the encrypted memo field in Zcash, we got excited. For the first
@@ -481,13 +494,15 @@
         transactions can include tiny encrypted memos, which only the recipient can see. The cost per message is very
         low: penny can send more than a hundred messages. (So we automatically send every Zbay user a small amount of
         the Zcash currency, ZEC, to get them started.)</p>
-      <p class="zb-p">An encrypted memo allows a maximum of just 512 characters, but Zbay squeezes a lot of interesting stuff into it. If
+      <p class="zb-p">An encrypted memo allows a maximum of just 512 characters, but Zbay squeezes a lot of interesting
+        stuff into it. If
         you message another user, we send a transaction with a tiny amount of ZEC and an encrypted memo containing the
         contents of your message and your signature. (Zcash includes no information about the sender of a message, so we
         have to include your signature so that the recipient will know it's you!)</p>
       <p class="zb-p">If you message a group of users, we send the exact same kind of message to one address, but
         everyone in the group has the key to read messages sent to that address. That's what lets you into the group:
-        knowing the address to send to and having the key to read all the messages sent there. Zcash has separate keys for viewing and
+        knowing the address to send to and having the key to read all the messages sent there. Zcash has separate keys
+        for viewing and
         spending, so just because you can read messages doesn't mean you can spend money sent to the channel—only
         the user can do that. Unfortunately, there is no way to know who has joined the group, or to remove someone from
         the group. Access control for channels is very crude for now, but it works and is a starting point.<br></p>
@@ -496,16 +511,20 @@
         use the contents of these messages however it likes, it can offer familiar experiences like having a username
         and being able to message people with usernames, without smart contracts. The data live in the blockchain, but
         the smarts, for now, live in the Zbay app.</p>
-      <p class="zb-p">If you register a username, we send a message to an address that <em>everyone</em> has the viewing key
-        for. The message says "I hereby register the username @alice, this is my address, and this is my public key." And
+      <p class="zb-p">If you register a username, we send a message to an address that <em>everyone</em> has the viewing
+        key
+        for. The message says "I hereby register the username @alice, this is my address, and this is my public key."
+        And
         it's sent to a special address that's hardcoded into the Zbay app. (Soon you will be able to register multiple
         usernames and switch between them, but right now you can only have one.)<br></p>
       <p class="zb-p">We do the same thing when you make a channel public. ("I hereby register the channel #bears, this
-        is its address, and this is its viewing key.") The Zbay app can see all the channel registration messages sent to this address
+        is its address, and this is its viewing key.") The Zbay app can see all the channel registration messages sent
+        to this address
         and give users a nice searchable list, or make the channel #bears a clickable link if someone mentions it in a
         message.<br></p>
       <h3 class="zb-h3">Zbay has moderation</h3>
-      <p class="zb-p">Anyone can send a message to any address they know about, but Zbay can decide which messages it displays and which it ignores, and you can control this. If
+      <p class="zb-p">Anyone can send a message to any address they know about, but Zbay can decide which messages it
+        displays and which it ignores, and you can control this. If
         someone starts spamming you, you can block them and Zbay will recieve their messages but hide them from you. If
         spam becomes a problem we might start charging people more money to create accounts, or charging them to send a
         first message to someone else. (Each user could register the minimum spend to contact them for the first
@@ -523,16 +542,20 @@
         practice than it seems. According to the Snowden leaks, America’s NSA is saving a permanent copy of all messages
         that travel across the Internet. Other countries likely are too. In purely technical terms, when you delete
         something, whether on a centralized service like Facebook or even on your own computer, it’s hard to be sure it
-        was deleted. Some peer-to-peer networks make deletion of messages the norm, but on a peer-to-peer network any participant with a modified
-        app—from the NSA to a sleazy data collection business—can save every message they see, forever. As Edward Snowden
-        explains in his book <a href="https://www.goodreads.com/book/show/46223297-permanent-record">Permanent Record</a>, the best way to keep things private is to encrypt information and control
+        was deleted. Some peer-to-peer networks make deletion of messages the norm, but on a peer-to-peer network any
+        participant with a modified
+        app—from the NSA to a sleazy data collection business—can save every message they see, forever. As Edward
+        Snowden
+        explains in his book <a href="https://www.goodreads.com/book/show/46223297-permanent-record">Permanent
+          Record</a>, the best way to keep things private is to encrypt information and control
         the keys, not to rely on deletion.<br></p>
       <h3 class="zb-h3">Zbay can be used with Tor or VPNs for greater anonymity</h3>
       <p class="zb-p">Finally, there's an important caveat when it comes to anonymity: even though information about the
         sender of a message is hidden from folks viewing the blockchain, peers on the Zcash network can see the IP
         addresses of other peers as they post transactions. An attacker could join the network with a lot of peers and
         then associate transactions (like messages registering a username) to an IP address. This isn't especially
-        expensive. So it could be a good idea to use Zbay over a VPN, Tor, or both if you want increased anonymity, though you
+        expensive. So it could be a good idea to use Zbay over a VPN, Tor, or both if you want increased anonymity,
+        though you
         should understand the limits of those approaches and the risks too!<br></p>
     </div>
   </div>
@@ -559,7 +582,8 @@
               href="https://electriccoin.co/blog/encrypted-memo-field/">encrypted memos</a> and the viewing key to that
             channel. Like a Bitcoin address or a Google Doc set to “anyone with the link”, the key provides full access.
             Unlike a Google Doc, messages on a Zcash channel can’t be deleted, so anyone with access, or anyone who
-            controls a medium the key passes through, could potentially access all messages sent to that channel forever.</p>
+            controls a medium the key passes through, could potentially access all messages sent to that channel
+            forever.</p>
         </li>
         <li class="zb-faq__faq-item">
           <h2 class="zb-faq__question">Will messages be private forever?</h2>
@@ -577,9 +601,13 @@
         </li>
         <li class="zb-faq__faq-item">
           <h2 class="zb-faq__question">Is it anonymous?</h2>
-          <p class="zb-faq__p">If someone has your Zcash address or username, you can receive messages and funds from them
-            without revealing your IP address or identity, if Zcash’s anonymity claims are correct. (Note that your IP address would be visible as a Zcash or perhaps Zbay user, and there may not be many of those.) On the other hand, replying, sending messages, registering an
-            account, or creating a public channel could reveal your IP address to an attacker who was actively monitoring the Zcash network at that moment.</p>
+          <p class="zb-faq__p">If someone has your Zcash address or username, you can receive messages and funds from
+            them
+            without revealing your IP address or identity, if Zcash’s anonymity claims are correct. (Note that your IP
+            address would be visible as a Zcash or perhaps Zbay user, and there may not be many of those.) On the other
+            hand, replying, sending messages, registering an
+            account, or creating a public channel could reveal your IP address to an attacker who was actively
+            monitoring the Zcash network at that moment.</p>
           <p class="zb-faq__p">Our hope is that the Zcash team will address sender anonymity in the future, and tools
             like VPNs or Tor may provide additional anonymity protection in the meantime.</p>
         </li>
@@ -636,6 +664,14 @@
           <h2 class="zb-faq__question">Can I post images or other files in Zbay?<br></h2>
           <p class="zb-faq__p">Not at this time, though you may be able to post very small images or files in the
             future.</p>
+        </li>
+        <li id="node-info" class="zb-faq__faq-item">
+          <h2 class="zb-faq__question">What does node status fields mean?<br></h2>
+          <p class="zb-faq__p">Network - type of network your are currently connected.</p>
+          <p class="zb-faq__p">Blocks - amount of blocks synced by zcash node and expected height of last block.</p>
+          <p class="zb-faq__p">Connections - number of other zcash nodes that you are connected.</p>
+          <p class="zb-faq__p">UTXO - number of unspended outputs. Zbay needs UTXO to send messages so even if your
+            balance is positive but yout UTXO count is 0 you will not be able to send message.</p>
         </li>
         <li class="zb-faq__faq-item">
           <h2 class="zb-faq__question">What is Zbay’s carbon footprint? Will it destroy the planet?<br></h2>
