--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
         record of protecting the interests of Internet users against governments and corporate monopolies is long,
         varied and established.&nbsp;<br></p>
       <p class="zb-p">It started in the year 1980 in Cambridge, Massachusetts when, while fixing a broken printer, a
-        software engineer named Richard M. Stallman had a powerful revelation: he realized that software makers had
+        software engineer in the bowels of an MIT computer lab had a powerful revelation: he realized that software makers had
         legal—and technical—power to control software users, and that they could use this power in nefarious ways, to
         extort, spy, censor, or worse.<br></p>
-      <p class="zb-p">Stallman defined what he called the "four freedoms” to rally software makers around a brighter
+      <p class="zb-p">This software engineer defined what he called the "four freedoms” to rally software makers around a brighter
         future where software users were in control, not under control. And he called software that gave users these
         freedoms “free software.” The four freedoms were:<br></p>
       <ul class="zb-num-list">
@@ -186,7 +186,7 @@
         <li class="zb-num-list-item">The freedom to redistribute your changes, so the wider community can benefit from
           your work.<br></li>
       </ul>
-      <p class="zb-p">To protect and spread his vision for free software, Stallman also created the GNU GPL, an
+      <p class="zb-p">To protect and spread his vision for free software, he also created the GNU GPL, an
         ingenious legal contract that encoded the four freedoms into law. A software license, the GNU GPL gave software
         engineers a legal, contractual way to grant users and other engineers all four freedoms. It also required that
         any engineers who built on GNU GPL-licensed code also released <em>their </em>work under a similar license.</p>
@@ -243,7 +243,7 @@
         guarantee to users, users cannot depend on code running on computers outside their control. All of the important
         code needs to be running on a user’s own&nbsp; machine for free software’s guarantee to function fully.<br></p>
       <p class="zb-p">This is why, as more and more people used software shared by millions running on servers outside
-        their control, free software had a problem. Stallman's "four freedoms" only made sense when our apps ran on
+        their control, free software had a problem. The free software movement's "four freedoms" only made sense when our apps ran on
         *our* computers. Once we stopped downloading apps and running them on our computers, and started mostly using
         websites like Facebook or Youtube, or apps dependent on company servers like Spotify, free software no longer
         provided a meaningful check on those companies’ power to control users.<br></p>
