--- a/index.html
+++ b/index.html
@@ -1277,22 +1277,19 @@
           </li>
           <li id="node-info" class="zb-faq__faq-item">
             <h2 class="zb-faq__question">
-              What does node status fields mean?<br />
+              What does the information in the "node status" section mean?<br />
             </h2>
             <p class="zb-faq__p">
-              Network - type of network your are currently connected.
+              Network - This confirms that you're connected to the Zcash mainnet&mdash;where you will send and receive real Zcash&mdash;as opposed to the Zcash testnet.
             </p>
             <p class="zb-faq__p">
-              Blocks - amount of blocks synced by zcash node and expected height
-              of last block.
+              Blocks - Zcash transactions are stored in blocks. Here you see how many blocks Zbay has synced so far, and the total number of blocks available, from Zbay's perspective.
             </p>
             <p class="zb-faq__p">
-              Connections - number of other zcash nodes that you are connected.
+              Connections - This is the number of other Zcash nodes you are connected to. Typically you will connect to 8 nodes.
             </p>
             <p class="zb-faq__p">
-              UTXO - number of unspended outputs. Zbay needs UTXO to send
-              messages so even if your balance is positive but yout UTXO count
-              is 0 you will not be able to send message.
+              UTXO - This is the number of unspent outputs. We show this number here because running out of UTXOs will temporarily block you from sending messages, even if you have funds.
             </p>
           </li>
           <li class="zb-faq__faq-item">
