--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
               Connections - This is the number of other Zcash nodes you are connected to. Typically you will connect to 8 nodes.
             </p>
             <p class="zb-faq__p">
-              UTXO - This is the number of unspent outputs. We show this number here because running out of UTXOs will temporarily block you from sending messages, even if you have funds.
+              UTXO - This is the number of unspent outputs. We show this number here because running out of UTXOs will temporarily block you from sending messages, even if you have funds. (This should almost never happen, especially after you've been using Zbay for a bit.)
             </p>
           </li>
           <li class="zb-faq__faq-item">
