Adds mention of blockchain high up on page

--- a/new-draft/index.html
+++ b/new-draft/index.html
@@ -125,7 +125,7 @@ input[type=text] {
       <div class="zb-2-column-r-image w-row">
         <div class="zb-l-column w-col w-col-4"><img src="images/messages.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Message privately</h1>
+          <h1 class="zb-section-heading">Message privately, on-chain</h1>
           <p class="zb-p">On Zbay, every direct message you send is end-to-end encrypted so that only the recipient can read it.<br></p>
           <p class="zb-p">Unlike Signal &amp; WhatsApp, Zbay does not use phone numbers or “trust on first use”, so it’s more resistant to man-in-the-middle attacks.<br></p>
           <p class="zb-p">Unlike almost any other private messaging solution, Zbay does not depend on a server <em>or</em> require you to be online to receive messages. It's peer-to-peer and it just works.<br></p>
