Adds language about safety

--- a/new-draft/index.html
+++ b/new-draft/index.html
@@ -151,10 +151,10 @@ input[type=text] {
       <div class="zb-2-column-r-image w-row">
         <div class="zb-l-column w-col w-col-4"><img src="images/group-chat.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Start communities, earn money</h1>
+          <h1 class="zb-section-heading">Build safe communities, earn money</h1>
           <p class="zb-p">Zbay has “channels”, group chats that can be either private or public.<br></p>
           <p class="zb-p">Messages to a channel are encrypted, but everyone who gets the key to the channel can see them.<br></p>
-          <p class="zb-p">Public channels have owners who can moderate messages, set prices for advertising on the channel, and earn money if their channel thrives.<br></p>
+          <p class="zb-p">Public channels have owners who can moderate messages, keep their community safe from spam & abuse, set prices for advertising, and earn money if their channel thrives.<br></p>
         </div>
       </div>
     </div>
