More text changes

--- a/new-draft/index.html
+++ b/new-draft/index.html
@@ -86,7 +86,7 @@ input[type=text] {
   <div class="zb-hero-section">
     <div class="zb-hero">
       <div class="zb-hero__desc-cont">
-        <h1 class="zb-hero-heading">Your private inbox on a better Internet, for messages, money, and buying things.</h1>
+        <h1 class="zb-hero-heading">Your private inbox on the better Internet, for messages, money, and buying things.</h1>
         <div class="zb-form-block-cta w-form">
           <form id="email-form" name="email-form" data-name="Email Form" class="zb-cta-form"><input type="text" class="zb-enter-your-email w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your email" id="name"><input type="submit" value="Join the beta" data-wait="Please wait..." class="submit-button w-button"></form>
           <div class="success-message w-form-done">
@@ -127,8 +127,8 @@ input[type=text] {
         <div class="zb-r-column w-col w-col-8">
           <h1 class="zb-section-heading">Message privately, on-chain</h1>
           <p class="zb-p">On Zbay, every direct message you send is end-to-end encrypted so that only the recipient can read it.<br></p>
-          <p class="zb-p">Unlike Signal &amp; WhatsApp, Zbay does not use phone numbers or “trust on first use”, so it’s more resistant to man-in-the-middle attacks.<br></p>
-          <p class="zb-p">Unlike almost any other private messaging solution, Zbay does not depend on a server <em>or</em> require you to be online to receive messages. It's peer-to-peer and it just works.<br></p>
+          <p class="zb-p">Unlike Signal &amp; WhatsApp, Zbay does not use phone numbers or “trust on first use,” so it’s more resistant to man-in-the-middle attacks.<br></p>
+          <p class="zb-p">Unlike almost any other private messaging solution, Zbay does not depend on a server <em>or</em> require you to be online to receive messages. It's peer-to-peer and it just works. Zbay even supports <a href="https://www.torproject.org/">Tor</a>.<br></p>
         </div>
       </div>
     </div>
@@ -164,10 +164,10 @@ input[type=text] {
       <div class="zb-2-column-l-image w-row">
         <div class="zb-l-column w-col w-col-4"><img src="images/hello.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
-          <h1 class="zb-section-heading">Never be silenced</h1>
+          <h1 class="zb-section-heading">Be yourself, make your own rules</h1>
           <p class="zb-p">Zbay doesn't rely on central servers, and anyone can register a username or channel. (Soon, you’ll be able to register as many usernames as you want!)<br></p>
           <p class="zb-p">Usernames and channels get engraved in the Zcash blockchain, with your cryptographic key.<br></p>
-          <p class="zb-p">This means Zbay does not control who has a Zbay account, or what they do with it. If Zbay was ever forced to censor users, any developer could fork Zbay and remove the censorship.<br></p>
+          <p class="zb-p">This means Zbay does not control who has a Zbay account, or what you do with your account. If Zbay was ever forced to censor users, any developer could fork Zbay and remove the censorship.<br></p>
         </div>
       </div>
     </div>
@@ -207,7 +207,7 @@ input[type=text] {
           <h1 class="zb-section-heading">With money built-in, you're in control</h1>
           <p class="zb-p">Zbay uses the Zcash cryptocurrency to do everything.<br></p>
           <p class="zb-p">Reading messages is free, but sending a message costs about 1/50th of a cent. This simple mechanism helps sustain the network without relying on, say, a giant corporation monetizing your data someday.<br></p>
-          <p class="zb-p">For now, every Zbay user gets ~100+ messages to start with, for free! We’re also working on making it extremely easy to buy Zcash.<br></p>
+          <p class="zb-p">For now, every Zbay user gets ~100+ messages to start with, for free! We’re also working on making it extremely easy to buy Zcash, and to make all messages free in cases where they don't burden the network, for example when the recipient is online. <em>Ultimately, we hope to prove it's possible to build usable online spaces that don't compromise on privacy, freedom, or control. This is just a start, and we invite you to try it.</em><br></p>
         </div>
       </div>
     </div>
