--- a/new-draft/index.html
+++ b/new-draft/index.html
@@ -114,7 +114,7 @@ input[type=text] {
           </li>
         </ul>
         <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
-          <div class="zb-warning-text">⚠️ Zbay is in beta and shouldn&#x27;t be used for activities requiring security.</div>
+          <div class="zb-warning-text">⚠️ Zbay is in beta. Don't use it for storing funds or when security is critical.</div>
         </div>
       </div>
       <div data-w-id="026f2572-7222-947b-ef55-337847e2fc0d" style="-webkit-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-moz-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);-ms-transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);transform:translate3d(0, 309PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(52DEG) skew(0, 0);opacity:0" class="zb-hero__image-container"><img src="images/macbook-with-screen.png" srcset="images/macbook-with-screen-p-500.png 500w, images/macbook-with-screen-p-1600.png 1600w, images/macbook-with-screen-p-2000.png 2000w, images/macbook-with-screen.png 2344w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 80vw" alt="" class="zbay-app-mockup"></div>
@@ -243,7 +243,7 @@ input[type=text] {
           </li>
         </ul>
         <div class="zb-warning"><img src="images/warning.svg" width="48" height="48" alt="" class="zb-warning-image">
-          <div class="zb-warning-text">⚠️ Zbay is in beta and shouldn&#x27;t be used for activities requiring security.</div>
+          <div class="zb-warning-text">⚠️ Zbay is in beta. Don't use it for storing funds or when security is critical.</div>
         </div>
       </div>
     </div>
