--- a/new-draft/index.html
+++ b/new-draft/index.html
@@ -139,7 +139,7 @@ input[type=text] {
         <div class="zb-l-column w-col w-col-4"><img src="images/buying.svg" alt="" class="column-image"></div>
         <div class="zb-r-column w-col w-col-8">
           <h1 class="zb-section-heading">Buy &amp; sell</h1>
-          <p class="zb-p">You can buy and sell things on Zbay, privately.<br></p>
+          <p class="zb-p">You can buy and sell things on Zbay, privately, with <a href="https://z.cash">Zcash</a>.<br></p>
           <p class="zb-p">Zbay lets you send a seller your order information (quantity, size, etc.) and your shipping address (if necessary) with funds in an encrypted message.<br></p>
           <p class="zb-p">With Bitcoin, third parties can see who paid who, but Zcash makes this much more difficult, if not impossible, protecting your privacy. Someday Zbay will have escrow payments with dispute resolution and seller ratings. Right now, channel owners can use moderation to keep out scam sellers.<br></p>
         </div>
