Updates sharing metadata for Facebook

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.zbay.app/">
-<meta property="og:title" content="Your private inbox on the better Internet, for messages, money, and buying things.">
+<meta property="og:title" content="Messaging, group chats, and marketplaces... without giving giant corporations like Facebook all your data.">
 <meta property="og:image" content="https://www.zbay.app/images/sharing-image.png">
 
 <!-- Twitter -->
