Changes copyright text on other pages

--- a/how.html
+++ b/how.html
@@ -206,7 +206,7 @@ html {
       <li class="zb-footer__sec-btn-item"><a href="https://twitter.com/zbayapp" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
       <li class="zb-footer__sec-btn-item"><a href="https://github.com/ZbayApp/zbay" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
     </ul>
-    <div class="zb-footer__copyright-text">© Copyright Zbay 2020</div>
+    <div class="zb-footer__copyright-text"><span class="copy-left">©</span> Copyleft Zbay 2020</div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5eda64bd77a8dc6e05ed8a12" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
