Adds og:description

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta property="og:url" content="https://www.zbay.app/">
 <meta property="og:title" content="Your private inbox on the better Internet, for messages, money, and buying things.">
 <meta property="og:image" content="https://www.zbay.app/images/sharing-image.png">
+<meta property="og:description" content="Zbay lets you send messages, build online communities and marketplaces, and buy & sell products privately using Zcash.">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
