Fixes broken link

--- a/why.html
+++ b/why.html
@@ -748,7 +748,7 @@ html {
     </div>
   </div>
   <div class="zb-footer">
-    <div class="zb-footer__logo-container"><a href="old-home.html" class="zb-footer__logo-link-block w-inline-block"><img src="images/logo-lockup--circle--watermark.svg" alt="" class="zb-footer__logo"></a></div>
+    <div class="zb-footer__logo-container"><a href="/" class="zb-footer__logo-link-block w-inline-block"><img src="images/logo-lockup--circle--watermark.svg" alt="" class="zb-footer__logo"></a></div>
     <ul role="list" class="zb-footer__pri-btns-list">
       <li class="zb-footer__pri-btn-item">
         <a href="how.html" class="zb-footer__pri-btn w-inline-block">
