--- a/how.html
+++ b/how.html
@@ -37,7 +37,7 @@ html {
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="zb-navbar w-nav"><a href="index.html" class="brand w-nav-brand"><img src="images/logo-lockup--circle.svg" width="142.5" alt="" class="image-2"></a>
     <div class="spacer"></div>
-    <nav role="navigation" class="nav-menu w-nav-menu"><a href="how.html" aria-current="page" class="zb-nav-text-link w-nav-link w--current">How it works</a><a href="why.html" class="zb-nav-text-link w-nav-link">Why  Zbay?</a><a href="faq.html" class="zb-nav-text-link w-nav-link">FAQ</a><a href="https://twitter.com/zbayapp" class="zb-flex-nav-link w-inline-block"><img src="images/twitter--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Twitter</div></a><a href="https://github.com/ZbayApp/zbay" class="zb-flex-nav-link w-inline-block"><img src="images/github--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Github</div></a></nav>
+    <nav role="navigation" class="nav-menu w-nav-menu"><a href="how.html" aria-current="page" class="zb-nav-text-link w-nav-link w--current">How it works</a><a href="why.html" class="zb-nav-text-link w-nav-link">Why  Zbay?</a><a href="faq.html" class="zb-nav-text-link w-nav-link">FAQ</a><a href="https://twitter.com/zbayapp" class="zb-flex-nav-link w-inline-block"><img src="images/twitter--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Twitter</div></a><a href="https://github.com/ZbayApp/ZbayLite" class="zb-flex-nav-link w-inline-block"><img src="images/github--black.svg" alt="" class="zb-nav-icon"><div class="zb-nav-text">Github</div></a></nav>
     <div class="menu-button w-nav-button"><img src="images/hamburger.svg" alt="" class="image-3"></div>
   </div>
   <div id="how" class="zb-how-section">
@@ -204,7 +204,7 @@ html {
     </ul>
     <ul role="list" class="zb-footer__sec-btns-list">
       <li class="zb-footer__sec-btn-item"><a href="https://twitter.com/zbayapp" class="zb-footer__sec-btn w-inline-block"><img src="images/twitter--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
-      <li class="zb-footer__sec-btn-item"><a href="https://github.com/ZbayApp/zbay" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
+      <li class="zb-footer__sec-btn-item"><a href="https://github.com/ZbayApp/ZbayLite" class="zb-footer__sec-btn w-inline-block"><img src="images/github--white.svg" alt="" class="zb-footer__sec-btn-image"></a></li>
     </ul>
     <div class="zb-footer__copyright-text"><span class="copy-left">©</span> Copyleft Zbay 2020</div>
   </div>
