Removes incorrect lines about optional Tor support.

--- a/faq.html
+++ b/faq.html
@@ -144,7 +144,8 @@ html {
         <li class="zb-faq__faq-item">
           <h2 class="zb-faq__question">Can I use Tor with Zbay?</h2>
           <p class="zb-faq__p">
-            Yes, Zbay includes basic Tor support, which lets you instruct the
+            <s>
+              Yes, Zbay includes basic Tor support, which lets you instruct the
             Zcash node to connect through Tor. However, there are important
             <a
               href="https://zcash.readthedocs.io/en/latest/rtd_pages/tor.html"
@@ -155,6 +156,7 @@ html {
               >install Tor Browser</a
             >, run it, select the “Connect through Tor” option on startup, and
             make sure the proxy URL is correct.
+          </s> Not at the moment. The option of connecting with Tor was removed with the release of a light client version of Zbay.   
           </p>
         </li>
         <li class="zb-faq__faq-item">
