--- a/faq.html
+++ b/faq.html
@@ -141,22 +141,16 @@ html {
             based on the timing of messages) or through other attacks.
           </p>
         </li>
-        <li class="zb-faq__faq-item">
+        <li id="tor" class="zb-faq__faq-item">
           <h2 class="zb-faq__question">Can I use Tor with Zbay?</h2>
           <p class="zb-faq__p">
-            <s>
-              Yes, Zbay includes basic Tor support, which lets you instruct the
-            Zcash node to connect through Tor. However, there are important
-            <a
-              href="https://zcash.readthedocs.io/en/latest/rtd_pages/tor.html"
-              >important warnings</a
-            >
-            about Tor support in Zcash. To use Tor,
-            <a href="https://www.torproject.org/download/"
-              >install Tor Browser</a
-            >, run it, select the “Connect through Tor” option on startup, and
-            make sure the proxy URL is correct.
-          </s> Not at the moment. The option of connecting with Tor was removed with the release of a light client version of Zbay.   
+            Yes. Communication with Zcash blockchain is not going through Tor
+            but Zbay allows for P2P communication without Zcash. You can enable it in settings
+            tab. P2P communication uses Tor hidden services and enables almost instant communication.
+            Messages sent are not stored on Zcash blockchain, so they will completely disappear once you close 
+            application.
+            Unfortunately this feature only works if both users are online in the same time. Group chats are
+            not supported but we are working on it.
           </p>
         </li>
         <li class="zb-faq__faq-item">
