Removes out-of-date language about earning money

--- a/faq.html
+++ b/faq.html
@@ -162,27 +162,8 @@ html {
         <li class="zb-faq__faq-item">
           <h2 class="zb-faq__question">Can I earn money with Zbay?</h2>
           <p class="zb-faq__p">
-            Yes! You can earn money by sharing Zbay with friends. It works
-            like an affiliate code. You can send them a small amount of money
-            (say, $1 if you like) to encourage them to install Zbay, including
-            your address in the invitation link to receive a small percentage
-            of what they spend, at least until they update their donation
-            settings. (You could even send the link to a large audience,
-            offering a larger sum of money as a prize. The first person to
-            import the link would win the prize, and you would receive a share
-            of whatever funds all users who accepted the invitation spend on
-            Zbay.)
-          </p>
-          <p class="zb-faq__p">
-            You can earn money by starting a channel. Channel owners receive
-            small amounts of money when messages are sent to a channel, and
-            they can set the minimum spend required for a message to be
-            visible. This can help reduce spam, but it can also earn revenue
-            for the channel, to support the work of moderation, for example.
-          </p>
-          <p class="zb-faq__p">
-            Finally, you can advertise and sell physical or digital goods on
-            Zbay, too. The market is likely to be very small at first. But if
+            Yes! You can advertise and sell physical or digital goods on
+            Zbay. The market is likely to be very small at first. But if
             you’d like to pioneer a new kind of platform, try it out. Because
             Zbay doesn’t have a built-in ratings system (yet) we recommend
             focusing on building a reputation with a small group of people as
